--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -4,12 +4,16 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
     - host: ticketing.dev
       http:
         paths:
+          - path: /api/payments/?(.*)
+            backend:
+              serviceName: payments-srv
+              servicePort: 3000
           - path: /api/users/?(.*)
             backend:
               serviceName: auth-srv
@@ -17,6 +21,10 @@ spec:
           - path: /api/tickets/?(.*)
             backend:
               serviceName: tickets-srv
+              servicePort: 3000
+          - path: /api/orders/?(.*)
+            backend:
+              serviceName: orders-srv
               servicePort: 3000
           - path: /?(.*)
             backend:
